--- a/themes/v2/assets/scss/_single.scss
+++ b/themes/v2/assets/scss/_single.scss
@@ -85,7 +85,7 @@
 
   &-content {
     margin-top: 30px;
-    font-family: "Input Mono Narrow", -apple-system, BlinkMacSystemFont, "Roboto",
+    font-family: "Fira Code", -apple-system, BlinkMacSystemFont, "Roboto",
     "Segoe UI", Helvetica, Arial, sans-serif;
 
     ul li::marker {
