--- a/themes/v2/assets/scss/_fonts.scss
+++ b/themes/v2/assets/scss/_fonts.scss
@@ -4,7 +4,7 @@
   font-display: auto;
   font-weight: 400;
   src: url("../fonts/Inter-UI-Regular.woff2") format("woff2"),
-       url("../fonts/Inter-UI-Regular.woff") format("woff");
+    url("../fonts/Inter-UI-Regular.woff") format("woff");
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   font-display: auto;
   font-weight: 400;
   src: url("../fonts/Inter-UI-Italic.woff2") format("woff2"),
-       url("../fonts/Inter-UI-Italic.woff") format("woff");
+    url("../fonts/Inter-UI-Italic.woff") format("woff");
 }
 
 @font-face {
@@ -22,7 +22,7 @@
   font-display: auto;
   font-weight: 600;
   src: url("../fonts/Inter-UI-Medium.woff2") format("woff2"),
-       url("../fonts/Inter-UI-Medium.woff") format("woff");
+    url("../fonts/Inter-UI-Medium.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
@@ -30,7 +30,7 @@
   font-display: auto;
   font-weight: 600;
   src: url("../fonts/Inter-UI-MediumItalic.woff2") format("woff2"),
-       url("../fonts/Inter-UI-MediumItalic.woff") format("woff");
+    url("../fonts/Inter-UI-MediumItalic.woff") format("woff");
 }
 
 @font-face {
@@ -39,7 +39,7 @@
   font-display: auto;
   font-weight: 800;
   src: url("../fonts/Inter-UI-Bold.woff2") format("woff2"),
-       url("../fonts/Inter-UI-Bold.woff") format("woff");
+    url("../fonts/Inter-UI-Bold.woff") format("woff");
 }
 @font-face {
   font-family: 'Inter UI';
@@ -47,16 +47,16 @@
   font-display: auto;
   font-weight: 800;
   src: url("../fonts/Inter-UI-BoldItalic.woff2") format("woff2"),
-       url("../fonts/Inter-UI-BoldItalic.woff") format("woff");
+    url("../fonts/Inter-UI-BoldItalic.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Input Mono Narrow';
+  font-family: 'Fira Code';
   font-style:  normal;
   font-display: auto;
   font-weight: 400;
-  src: url("../fonts/InputMonoNarrow-Regular.woff2") format("woff2"),
-       url("../fonts/InputMonoNarrow-Regular.woff") format("woff");
+  src: url("../fonts/FiraCode-Regular.woff2") format("woff2"),
+    url("../fonts/FiraCode-Regular.woff") format("woff");
 }
 
 @font-face {
@@ -65,5 +65,5 @@
   font-display: auto;
   font-weight: 400;
   src: url("../fonts/AlfaSlabOne-Regular.woff2") format("woff2"),
-       url("../fonts/AlfaSlabOne-Regular.woff") format("woff");
+    url("../fonts/AlfaSlabOne-Regular.woff") format("woff");
 }
