--- a/themes/v2/assets/scss/_panels.scss
+++ b/themes/v2/assets/scss/_panels.scss
@@ -5,7 +5,7 @@
     overflow: hidden;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
             box-shadow: 0 1px 1px rgba(0,0,0,.05);
-    font-family: "Input Mono Narrow", -apple-system, BlinkMacSystemFont, "Roboto",
+    font-family: "Fira Code", -apple-system, BlinkMacSystemFont, "Roboto",
         "Segoe UI", Helvetica, Arial, sans-serif;
 
     &-centered {
