--- a/themes/v2/assets/scss/_fonts.scss
+++ b/themes/v2/assets/scss/_fonts.scss
@@ -59,6 +59,25 @@
     url("../fonts/FiraCode-Regular.woff") format("woff");
 }
 
+
+@font-face {
+  font-family: 'Fira Code';
+  font-style:  normal;
+  font-display: auto;
+  font-weight: 600;
+  src: url("../fonts/FiraCode-Medium.woff2") format("woff2"),
+    url("../fonts/FiraCode-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  font-style:  normal;
+  font-display: auto;
+  font-weight: 800;
+  src: url("../fonts/FiraCode-Bold.woff2") format("woff2"),
+    url("../fonts/FiraCode-Bold.woff") format("woff");
+}
+
 @font-face {
   font-family: 'Alfa Slab One';
   font-style:  normal;
